objects/copado__Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>copado__CCM_Licenses__c</fullName>
        <label>CCM Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Copado_Licenses__c</fullName>
        <label>Copado Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Copado_Site__c</fullName>
        <defaultValue>&quot;http://copado.sandbox.cs17.force.com&quot;</defaultValue>
        <label>Copado_Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>copado__Enabled_Multi_Licenses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled Multi-Licenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Server_URL__c</fullName>
        <defaultValue>&quot;https://copado.herokuapp.com&quot;</defaultValue>
        <label>Server_URL</label>
        <type>Url</type>
    </fields>
    <label>Settings</label>
</CustomObject>